--- a/automatic_summarization/text_summarization.ipynb
+++ b/automatic_summarization/text_summarization.ipynb
@@ -2,10 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import nltk\n",
+    "import math\n",
     "from nltk.tokenize import sent_tokenize, word_tokenize\n",
     "from nltk.corpus import stopwords\n",
     "from string import punctuation\n",
@@ -15,16 +17,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 两个句子的相似度"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 两个句子的相似度\n",
-    "def sentence_similarity(sent1, sent2):\n",
+    "def sentence_similarity(sent1, sent2, stopword):\n",
     "    \n",
-    "    sent1 = [w.lower() for w in sent1]\n",
-    "    sent2 = [w.lower() for w in sent2]\n",
+    "    sent1 = [w.lower() for w in sent1 if w not in stopword]\n",
+    "    sent2 = [w.lower() for w in sent2 if w not in stopword]\n",
     "    \n",
     "    all_words = list(set(sent1 + sent2))\n",
     "    \n",
@@ -41,31 +49,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 计算句子-句子相似矩阵"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_similarity_matrix(sentences):\n",
+    "def build_similarity_matrix(sentences, stopword):\n",
     "    \n",
     "    similarity_matrix = np.zeros((len(sentences), len(sentences)))\n",
     "    for idx1 in range(len(sentences)):\n",
     "        for idx2 in range(len(sentences)):\n",
     "            if idx1 == idx2:\n",
     "                continue\n",
-    "            similarity_matrix[idx1][idx2] = sentence_similarity(sentences[idx1], sentences[idx2])\n",
+    "            similarity_matrix[idx1][idx2] = sentence_similarity(sentences[idx1], sentences[idx2], stopword)\n",
     "    return similarity_matrix"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 手动计算每个句子的 PageRank 值"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sentences_pagerank(similarity_matrix):\n",
+    "    \n",
+    "    new_scores = [0.5 for _ in range(len(similarity_matrix))]\n",
+    "    old_scores = [0.0 for _ in range(len(similarity_matrix))]\n",
+    "    \n",
+    "    while isUpdate(new_scores, old_scores):\n",
+    "        for i in range(len(similarity_matrix)):\n",
+    "            old_scores[i] = new_scores[i]\n",
+    "        for i in range(len(similarity_matrix)):\n",
+    "            new_scores[i] = update_score(similarity_matrix, new_scores, i)\n",
+    "    return new_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "若更新后的分数和更新前的分数相差小于0.0001，则认为 PR 值已趋于稳定\n",
+    "\"\"\"\n",
+    "def isUpdate(new_scores, old_scores):\n",
+    "    flag = False\n",
+    "    for i in range(len(new_scores)):\n",
+    "        if math.fabs(new_scores[i] - old_scores[i]) >= 0.0001:\n",
+    "            flag = True\n",
+    "            break\n",
+    "    return flag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_score(weight_graph, scores, i):\n",
+    "    length = len(weight_graph)\n",
+    "    d = 0.85\n",
+    "    added_score = 0.0\n",
+    " \n",
+    "    for j in range(length):\n",
+    "        fraction = 0.0\n",
+    "        denominator = 0.0\n",
+    "        # 计算分子\n",
+    "        fraction = weight_graph[j][i] * scores[j]\n",
+    "        # 计算分母\n",
+    "        for k in range(length):\n",
+    "            denominator += weight_graph[j][k]\n",
+    "        added_score += fraction / denominator\n",
+    "    weighted_score = (1 - d) + d * added_score\n",
+    " \n",
+    "    return weighted_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_summary(file_name, top_n=5):\n",
     "    \n",
-    "    summarize_text = []\n",
+    "    stopword = set(stopwords.words('english') + list(punctuation))\n",
     "    \n",
     "    data = open(file_name, \"r\").read().replace('\\n', ' ')\n",
     "    \n",
@@ -77,42 +168,66 @@
     "        sentences.append(sen.split(\" \"))\n",
     "        \n",
     "    # 句子转化为向量，并计算相似度\n",
-    "    sentence_similarity_matrix = build_similarity_matrix(sentences)\n",
+    "    sentence_similarity_matrix = build_similarity_matrix(sentences, stopword)\n",
     "    \n",
-    "    # 得到相似矩阵图\n",
+    "    ############################################################\n",
+    "    #\n",
+    "    # 1. 手动计算每个句子的 PageRank 值\n",
+    "    #\n",
+    "    scores = sentences_pagerank(sentence_similarity_matrix)\n",
+    "    # print(scores)\n",
+    "    \n",
+    "    \n",
+    "    \"\"\"\n",
+    "    ############################################################\n",
+    "    #\n",
+    "    # 2. 使用复杂网络库networkx计算图中每个节点的 PageRank 值\n",
+    "    #\n",
+    "    \n",
+    "    # 根据句子间的相似度，构建相似矩阵图\n",
     "    sentence_similarity_graph = nx.from_numpy_array(sentence_similarity_matrix)\n",
-    "    print(sentence_similarity_graph.edges(data=True))\n",
+    "    # print(sentence_similarity_graph.edges(data=True))\n",
     "    \n",
-    "    # 计算图中每个节点的PageRank值\n",
     "    scores = nx.pagerank(sentence_similarity_graph)\n",
-    "    ranked_sentence = sorted(((scores[i], s) for i, s in enumerate(sentences)), reverse=True)\n",
+    "    \"\"\"\n",
     "    \n",
-    "    # 构建最后结果\n",
+    "    \n",
+    "    # 根据 PR 值对句子排序\n",
+    "    ranked_sentence = sorted(((scores[i], s) for i, s in enumerate(sentences)), reverse=True)\n",
+    "    # print(ranked_sentence)\n",
+    "    \n",
+    "    # 选取 PR 值最高的 top_n 个句子组成摘要\n",
+    "    summarize_text = []\n",
     "    for i in range(top_n):\n",
     "        summarize_text.append(\" \".join(ranked_sentence[i][1]))\n",
     "        \n",
-    "    print(\"Summarize: \\n\", \". \".join(summarize_text))\n",
-    "    "
+    "    print(\"Summarize: \\n\", \". \".join(summarize_text))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 1, {'weight': 0.26650089544451305}), (0, 2, {'weight': 0.31980107453341566}), (0, 3, {'weight': 0.21821789023599236}), (0, 4, {'weight': 0.3127716210856122}), (0, 5, {'weight': 0.1147078669352809}), (0, 6, {'weight': 0.22360679774997894}), (0, 7, {'weight': 0.3592106040535499}), (0, 8, {'weight': 0.22360679774997894}), (0, 9, {'weight': 0.24333213169614387}), (0, 10, {'weight': 0.06933752452815367}), (1, 2, {'weight': 0.2727272727272727}), (1, 3, {'weight': 0.23262105259961774}), (1, 4, {'weight': 0.22227711223719349}), (1, 5, {'weight': 0.14673479641335552}), (1, 6, {'weight': 0.19069251784911845}), (1, 7, {'weight': 0.30633583242699347}), (1, 8, {'weight': 0.1430193883868388}), (1, 9, {'weight': 0.27668578554642986}), (1, 10, {'weight': 0.059131239598908314}), (2, 3, {'weight': 0.37219368415938836}), (2, 4, {'weight': 0.3111879571320709}), (2, 5, {'weight': 0.19564639521780736}), (2, 6, {'weight': 0.09534625892455917}), (2, 7, {'weight': 0.1914598952668709}), (2, 8, {'weight': 0.19069251784911845}), (2, 9, {'weight': 0.3458572319330373}), (2, 10, {'weight': 0.059131239598908314}), (3, 4, {'weight': 0.27300945311597413}), (3, 5, {'weight': 0.20025046972870353}), (3, 6, {'weight': 0.14638501094227996}), (3, 7, {'weight': 0.1959654504174051}), (3, 8, {'weight': 0.048795003647426616}), (3, 9, {'weight': 0.2831969301619155}), (4, 5, {'weight': 0.23918243661746996}), (4, 6, {'weight': 0.27975144247209416}), (4, 7, {'weight': 0.2996023545092553}), (4, 8, {'weight': 0.18650096164806274}), (4, 9, {'weight': 0.23677853202210852}), (4, 10, {'weight': 0.17349447958987207}), (5, 6, {'weight': 0.15389675281277304}), (5, 7, {'weight': 0.2060214108575823}), (5, 8, {'weight': 0.051298917604257754}), (5, 9, {'weight': 0.2977291710259147}), (6, 7, {'weight': 0.32128773156099955}), (6, 8, {'weight': 0.19999999999999996}), (6, 9, {'weight': 0.03627381250550055}), (6, 10, {'weight': 0.18605210188381271}), (7, 8, {'weight': 0.16064386578049983}), (7, 9, {'weight': 0.14567913668701626}), (7, 10, {'weight': 0.09962709627734356}), (8, 9, {'weight': 0.10882143751650175}), (8, 10, {'weight': 0.18605210188381271}), (9, 10, {'weight': 0.08998425413316946})]\n",
       "Summarize: \n",
-      " In order to install the beta software, you will need a supported device and be registered on the Apple Developer Center. Apple has released the first beta of iOS 12.3 and tvOS 12.3 to developers. The new 12.3 betas include the new Apple TV app which is scheduled to officially launch in May. For those of you with Apple鈥檚 third-generation set-top box, the firm has released a beta version of Apple TV Software 7.3 which can be downloaded and installed via iTunes. The developments comes just a few days since it released iOS 12.2 which came with support for Apple News+ and new Animoji\n"
+      " You can read more about installing beta software on iOS and Apple TV devices on Apple's support page. The new 12.3 betas include the new Apple TV app which is scheduled to officially launch in May. Apple has released the first beta of iOS 12.3 and tvOS 12.3 to developers. The developments comes just a few days since it released iOS 12.2 which came with support for Apple News+ and new Animoji. For those of you with Apple's third-generation set-top box, the firm has released a beta version of Apple TV Software 7.3 which can be downloaded and installed via iTunes\n"
      ]
     }
    ],
    "source": [
     "generate_summary(\"./data.txt\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
